# freebrowser

./: LICENSE  README.md
cmd/: build-proxy.sh  main.go
freebrowser/android/: README.md
freebrowser/android/chromium/src/: 001.patch  args.gn
freebrowser/android/chromium/src/gfapp/java/res/values/: channel_constants.xml  strings.xml
freebrowser/android/chromium/src/gfapp/java/res/values-zh-rCN/: channel_constants.xml
freebrowser/android/chromium/src/gfapp/java/res/values-zh-rHK/: channel_constants.xml
freebrowser/android/chromium/src/gfapp/java/res/values-zh-rTW/: channel_constants.xml
freebrowser/desktop/: README.md  build-browser.sh  freebrowser.go  manifest-windows.xml  versioninfo-windows.json  versioninfo-windows.syso
freebrowser/desktop/config/: config_dev.go  config_general.go  config_prod.go
freebrowser/desktop/files/chrome/.pki/nssdb/: cert9.db  key4.db  pkcs11.txt
freebrowser/desktop/package-macos/: fbapprun.scpt  icon_macos.icns
pkg/: certs.go  proxy.go  request.go
pkg/config/: config_dev.go  config_general.go  config_prod.go  fb.config  proxy.key  proxy.pem
