target_os = "android"
target_cpu = "arm64"
android_override_version_code = "001"
android_override_version_name = "0.0.1"
ffmpeg_branding = "Chrome"
enable_ffmpeg_video_decoders = true
enable_av1_decoder = true
enable_dav1d_decoder = true
proprietary_codecs = true
media_use_libvpx = true
is_official_build = true
android_keystore_name = "<keystore name>"
android_keystore_password = "<keystore password>"
android_keystore_path = "//gfapp/gf.keystore"
chrome_public_manifest_package = "com.example.gfapp"
disable_file_support = false
is_component_build = false
use_crash_key_stubs = false
use_partition_alloc = true
include_transport_security_state_preload_list = false
use_platform_icu_alternatives = true
use_errorprone_java_compiler = true
use_platform_icu_alternatives = false
enable_reporting = false
enable_base_tracing = true
enable_libaom = true
use_perfetto_client_library = false
#skip_secondary_abi_for_cq = true
v8_use_external_startup_data=true
enable_perfetto_trace_processor = true
#update_android_aar_prebuilts=true